# geevm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml
benchmarks/sources/org/geevm/benchmarks/: Factorial.java  Fibonacci.java  NQueens.java
src/: JvmTypes.h
src/class_file/: Attributes.h  ClassFile.cpp  ClassFile.h  ClassFileReader.cpp  Code.cpp  Code.h  ConstantPool.cpp  ConstantPool.h  Descriptor.cpp  Descriptor.h  Opcode.def  Opcode.h
src/common/: ByteStream.h  Debug.cpp  Debug.h  DynamicLibrary.cpp  DynamicLibrary.h  Encoding.cpp  Encoding.h  Hash.h  JvmError.cpp  JvmError.h  JvmTypes.h  Locale.cpp  Memory.h  Strings.cpp  System.cpp  System.h  TypeTraits.h  Zip.cpp  Zip.h
src/native/java/io/: FileDescriptor.cpp  FileInputStream.cpp  FileOutputStream.cpp
src/native/java/lang/: Class.cpp  ClassLoader.cpp  Double.cpp  Float.cpp  Object.cpp  Runtime.cpp  StackTraceElement.cpp  StrictMath.cpp  String.cpp  System.cpp  Thread.cpp  Throwable.cpp
src/native/java/lang/ref/: Reference.cpp
src/native/java/lang/reflect/: Array.cpp
src/native/java/security/: AccessController.cpp
src/native/jdk/internal/misc/: CDS.cpp  ScopedMemoryAccess.cpp  Signal.cpp  Unsafe.cpp  Vm.cpp
src/native/jdk/internal/reflect/: Reflection.cpp
src/native/jdk/internal/util/: SystemProps.cpp
src/native/org/geevm/util/: Printer.cpp
src/unit_tests/: BaseTest.h  CMakeLists.txt  ClassFileReaderTest.cpp  DescriptorTest.cpp  EncodingTest.cpp  GarbageCollectorTest.cpp  InstanceTest.cpp
src/vm/: Class.cpp  Class.h  ClassLoader.cpp  ClassLoader.h  ClassPath.cpp  ClassPath.h  Field.h  Frame.cpp  Frame.h  GarbageCollector.cpp  GarbageCollector.h  GcRoots.cpp  GcRoots.h  Heap.cpp  Heap.h  Instance.cpp  Instance.h  Interpreter.cpp  Interpreter.h  JniImplementation.cpp  JniImplementation.h  Method.cpp  Method.h  NativeMethods.cpp  NativeMethods.h  RootList.cpp  Runtime.cpp  Runtime.h  StackMap.cpp  StackMap.h  StringHeap.cpp  StringHeap.h  Thread.cpp  Thread.h  Value.h  Vm.cpp  Vm.h  VmUtils.cpp  VmUtils.h
src/vm/jit/: JitCompiler.h  JitCompilerX86.cpp
tests/: CMakeLists.txt  compile.py  lit.cfg.py  lit.site.cfg.py.in  run_lit.py  run_tests.py
tests/class_file/org/geevm/tests/classfile/: Fields.java  HelloWorld.java  Inheritance.java  Methods.java
tests/programs/: CMakeLists.txt  run_tests.py
tests/programs/org/geevm/tests/: Printer.java
tests/programs/org/geevm/tests/arrays/: BooleanArrays.java  ByteArrayExceptions.java  ByteArrays.java  CharArrayExceptions.java  CharArrays.java  DoubleArrayExceptions.java  DoubleArrays.java  FloatArrayExceptions.java  FloatArrays.java  IntArrayExceptions.java  IntArrays.java  LongArrayExceptions.java  LongArrays.java  MultiDimensionalArray.java  MultiDimensionalArrayFiveDim.java  MultiDimensionalObjectArray.java  ObjectArrayExceptions.java  ObjectArrays.java  ShortArrayExceptions.java  ShortArrays.java
tests/programs/org/geevm/tests/basic/: Count.java  CountToFive.java  DoubleAdd.java  DoubleArithmetic.java  DoubleComparisons.java  DoubleDiv.java  DoubleMod.java  DoubleMul.java  DoubleNeg.java  DoubleSub.java  Dup.j  Dup2.j  Dup2X1.j  Dup2X2.j  DupX1.j  DupX2.j  FloatAdd.java  FloatArithmetic.java  FloatComparisons.java  FloatDiv.java  FloatMod.java  FloatMul.java  FloatNeg.java  FloatSub.java  HelloWorld.java  Inheritance.java  InheritanceFields.java  Instance.java  IntegerAdd.java  IntegerAnd.java  IntegerArithmetic.java  IntegerCompareZero.java  IntegerComparisons.java  IntegerDiv.java  IntegerLogicalShiftRight.java  IntegerMod.java  IntegerMul.java  IntegerNeg.java  IntegerOr.java  IntegerShiftLeft.java  (+29 more)
tests/programs/org/geevm/tests/basic/Output/: FloatMul.java
tests/programs/org/geevm/tests/basic/exceptions/: ExceptionInCallee.java  SimpleException.java  UncaughtException.java
tests/programs/org/geevm/tests/basic/inheritance/: Base.java  Derived.java
tests/programs/org/geevm/tests/basic/strings/: HelloWorld.java  StringEquals.java
tests/programs/org/geevm/tests/casting/: DoubleToFloat.java  DoubleToInt.java  DoubleToLong.java  FloatToDouble.java  FloatToInt.java  FloatToLong.java  IntToByte.java  IntToChar.java  IntToDouble.java  IntToFloat.java  IntToLong.java  IntToShort.java  LongToDouble.java  LongToFloat.java  LongToInt.java
tests/programs/org/geevm/tests/controlflow/: Goto.j  GotoWide.j  LookupSwitch.java  TableSwitch.java
tests/programs/org/geevm/tests/errors/: ClassCast.java  FieldAccessNullPointer.java  UnknownNativeMethod.java
tests/programs/org/geevm/tests/exceptions/: ExceptionInCallee.java  SimpleException.java  UncaughtException.java
tests/programs/org/geevm/tests/gc/: GcPreservesObjectHash.java
tests/programs/org/geevm/tests/init/ex1/: One.java  Super.java  Test.java  Two.java
tests/programs/org/geevm/tests/init/ex2/: Sub.java  Super.java  Test.java
tests/programs/org/geevm/tests/init/ex3/: I.java  J.java  K.java  Test.java
tests/programs/org/geevm/tests/oop/: Base.java  Derived.java  Inheritance.java  InheritanceFields.java  Instance.java
tests/programs/org/geevm/tests/reflection/: ClassMetadata.java
tests/programs/org/geevm/tests/strings/: HashCode.java  HelloWorld.java  StringEquals.java  Unicode.java
tests/programs/org/geevm/tests/system/: ArrayCopy.java  ArrayCopyExceptions.java  HelloWorldSystem.java
tests/programs/org/geevm/util/: Printer.java
